--- a/index.html
+++ b/index.html
@@ -1,260 +1,297 @@
-<!DOCTYPE html>
+<!--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <title>Bike Safe</title>
-    <style>
-      #right-panel {
-        font-family: 'Roboto','sans-serif';
-        line-height: 30px;
-        padding-left: 10px;
-      }
-
-      #right-panel select, #right-panel input {
-        font-size: 15px;
-      }
-
-      #right-panel select {
-        width: 100%;
-      }
-
-      #right-panel i {
-        font-size: 12px;
-      }
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        height: 100%;
-        float: left;
-        width: 63%;
-        height: 100%;
-      }
-      #right-panel {
-        float: right;
-        width: 34%;
-        height: 100%;
-      }
-      .panel {
-        height: 100%;
-        overflow: auto;
-      }
-            #description {
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-      }
-
-      #infowindow-content .title {
-        font-weight: bold;
-      }
-
-      #infowindow-content {
-        display: none;
-      }
-
-      #map #infowindow-content {
-        display: inline;
-      }
-
-      .pac-card {
-        margin: 10px 10px 0 0;
-        border-radius: 2px 0 0 2px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-        background-color: #fff;
-        font-family: Roboto;
-      }
-
-      #pac-container {
-        padding-bottom: 12px;
-        margin-right: 12px;
-      }
-
-      .pac-controls {
-        display: inline-block;
-        padding: 5px 11px;
-      }
-
-      .pac-controls label {
-        font-family: Roboto;
-        font-size: 13px;
-        font-weight: 300;
-      }
-
-      #pac-input {
-        background-color: #fff;
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-        margin-left: 12px;
-        padding: 0 11px 0 13px;
-        text-overflow: ellipsis;
-        width: 400px;
-      }
-
-      #pac-input:focus {
-        border-color: #4d90fe;
-      }
-
-      #title {
-        color: #fff;
-        background-color: #4d90fe;
-        font-size: 25px;
-        font-weight: 500;
-        padding: 6px 12px;
-      }
-      #target {
-        width: 345px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <div id="right-panel">
-      <p>Total Distance: <span id="total"></span></p>
-    </div>
-    <script>
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: {lat: -24.345, lng: 134.46}  // Australia.
-        });
-        var directionsService = new google.maps.DirectionsService;
-        var directionsDisplay = new google.maps.DirectionsRenderer({
-          draggable: true,
-          map: map,
-          panel: document.getElementById('right-panel')
-        });
-        var bikeLayer = new google.maps.BicyclingLayer();
-        bikeLayer.setMap(map);
-        directionsDisplay.addListener('directions_changed', function() {
-          computeTotalDistance(directionsDisplay.getDirections());
-        });
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-            displayRoute(pos, 'Albany, NY', directionsService,
-            directionsDisplay);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-        
-      }
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-      }
-
-      function displayRoute(origin, destination, service, display) {
-        service.route({
-          origin: origin,
-          destination: destination,
-          //waypoints: [{location: 'Albany, Ny'}],
-          travelMode: 'BICYCLING',
-          //travelMode: 'DRIVING',
-          avoidTolls: true
-        }, function(response, status) {
-          if (status === 'OK') {
-            display.setDirections(response);
-          } else {
-            alert('Could not display directions due to: ' + status);
-          }
-        });
-      }
-
-      function computeTotalDistance(result) {
-        var total = 0;
-        var myroute = result.routes[0];
-        for (var i = 0; i < myroute.legs.length; i++) {
-          total += myroute.legs[i].distance.value;
-        }
-        total = total / 1000;
-        document.getElementById('total').innerHTML = total + ' km';
-      }
-            function initAutocomplete() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -33.8688, lng: 151.2195},
-          zoom: 13,
-          mapTypeId: 'roadmap'
-        });
-
-        // Create the search box and link it to the UI element.
-        var input = document.getElementById('pac-input');
-        var searchBox = new google.maps.places.SearchBox(input);
-        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-
-        // Bias the SearchBox results towards current map's viewport.
-        map.addListener('bounds_changed', function() {
-          searchBox.setBounds(map.getBounds());
-        });
-
-        var markers = [];
-        // Listen for the event fired when the user selects a prediction and retrieve
-        // more details for that place.
-        searchBox.addListener('places_changed', function() {
-          var places = searchBox.getPlaces();
-
-          if (places.length == 0) {
-            return;
-          }
-
-          // Clear out the old markers.
-          markers.forEach(function(marker) {
-            marker.setMap(null);
-          });
-          markers = [];
-
-          // For each place, get the icon, name and location.
-          var bounds = new google.maps.LatLngBounds();
-          places.forEach(function(place) {
-            if (!place.geometry) {
-              console.log("Returned place contains no geometry");
-              return;
-            }
-            var icon = {
-              url: place.icon,
-              size: new google.maps.Size(71, 71),
-              origin: new google.maps.Point(0, 0),
-              anchor: new google.maps.Point(17, 34),
-              scaledSize: new google.maps.Size(25, 25)
-            };
-
-            // Create a marker for each place.
-            markers.push(new google.maps.Marker({
-              map: map,
-              icon: icon,
-              title: place.name,
-              position: place.geometry.location
-            }));
-
-            if (place.geometry.viewport) {
-              // Only geocodes have viewport.
-              bounds.union(place.geometry.viewport);
-            } else {
-              bounds.extend(place.geometry.location);
-            }
-          });
-          map.fitBounds(bounds);
-        });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpNjiWTjiPyKSCC-wGZex5RRfo8HjGyAM&callback=initMap">
-    </script>
-  </body>
+<head>
+<title>Location a Travel Category Flat Bootstarp Responsive Website Template | Home :: w3layouts</title>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Location Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.easydropdown.js"></script>
+<!-- Mega Menu -->
+<link href="css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="js/megamenu.js"></script>
+<script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
+<!-- Mega Menu -->
+</head>
+<body>
+<!-- banner -->
+	<div class="header">
+		<div class="container">
+			<div class="logo">
+				<a href="index.html"><img src="images/logo2.png" class="img-responsive" alt=""></a>
+				<a href="index.html"><img src="images/logo1.png" class="img-responsive" alt=""></a>
+			</div>
+			<div class="header-left">
+				<li a="" href="#"><div class="drop-down">
+							<select class="d-arrow">
+								<option value="Eng">Our Network</option>
+								<option value="Fren">versions</option>
+								<option value="Russ">variations</option>
+								<option value="Chin">Internet</option>
+							</select>
+								</div></li>
+			</div>
+				<div class="clearfix"></div>
+		</div>
+	</div>
+	<div class="header-bottom">
+		<div class="container">
+			<div class="top-nav">
+				<span class="menu"> </span>
+					<ul class="navig megamenu skyblue">
+						<li><a href="location.html" class="scroll"><span> </span> Bike Safe</a>
+							<div class="megapanel">
+								<div class="na-left">
+									<ul class="grid-img-list">
+										<li><a href="location.html">Find a Location  </a></li> |
+										<li><a href="addlocation.html">Add a location </a></li> |
+										<li><a href="location.html"> Review a location  </a></li> |
+										<li><a href="location.html">Review a location</a></li>
+										<div class="clearfix"> </div>	
+									</ul>
+								</div>
+								<div class="na-right">
+									<ul class="grid-img-list">
+										<li><a href="login.html">Login Here or</a></li>
+										<li class="reg">
+											<form action="register.html">
+												<input type="submit" value="Register">
+											</form>
+										</li>
+										<div class="clearfix"> </div>	
+									</ul>
+								</div>
+								<div class="clearfix"> </div>	
+		    				</div>
+						</li>
+						<li><a href="404.html" class="scroll"> <span class="service"> </span>Our Species</a></li>						
+						<li><a href="shop.html" class="scroll"><span class="mail"> </span>Shop </a></li>
+						<div class="clearfix"></div>
+					</ul>
+					<script>
+					$("span.menu").click(function(){
+						$(".top-nav ul").slideToggle(300, function(){
+						});
+					});
+				</script>
+			</div>
+			<div class="head-right">
+				<ul class="number">
+					<li><a href="login.html"><i class="roc"> </i>My Account</a></li>
+					<li><a href="register.html"><i class="phone"> </i>Sign Up</a></li>
+					<li><a href="contact.html"><i class="mail"> </i>Contact</a></li>	
+						<div class="clearfix"> </div>						
+				</ul>
+			</div>
+			<div class="clearfix"> </div>	
+		</div>
+	</div>
+	<div class="banner">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d403360.16353187413!2d144.84478329036483!3d-37.8310028845638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne+VIC%2C+Australia!5e0!3m2!1sen!2sin!4v1430221414094" width="100%" height="500" frameborder="0" style="border:0"></iframe>
+	</div>
+		<div class="banner-info">
+		<div class="container">
+			<div class="reservation">
+				<ul>	
+					<li class="boo">
+						<span>1</span><h4>Drop pin onto the location on map</h4>
+						<div class="clearfix"></div>						
+					</li>					  
+					<li class="boo">
+						<span>2</span><h4>Add a Species found at location</h4>
+						<div class="clearfix"></div>
+					</li>
+					<li class="span1_of_1">
+						<!----------start section_room----------->
+							<div class="section_room">
+								<select id="country" onchange="change_country(this.value)" class="frm-field required">
+									<option value="null">Select Fish</option>
+									<option value="null">Stands out </option>         
+									<option value="AX">where lets</option>
+									<option value="AX">vitae tortor</option>
+								</select>
+							</div>	
+					</li>
+					<li class="span1_of_3">
+						<div class="date_btn">
+							<form action="addlocation.html">
+								<input type="submit" value="Add Location">
+							</form>
+						</div>
+					</li>
+						<div class="clearfix"></div>
+				</ul>
+			</div>
+		</div>
+		</div>
+	<div class="loc-lov">
+		<div class="container">
+			<div class="loc-left">
+				<ul>
+					<li><a href="#"><i class="adm"></i></a></li>
+					<li><a href="#"><i class="set"></i></a></li>
+					<li><a href="#"><i class="str"></i></a></li>
+					<li><a href="#"><i class="plc"></i></a></li>
+					<li><a href="#"><i class="plus"></i></a></li>
+						<div class="clearfix"> </div>
+				</ul>
+			</div>
+			<div class="loc-right">
+				<div class="loc-top">
+					<h3>Locations you’ve Add</h3>
+					<p>Lets get some dunny no worries come a bloke. Stands out like a ridgy-didge where lets throw a sickie. </p>
+					<div class="blas">
+						<li class="wicked">Blaz’s wickaed ass fishing spot..</li>
+						<li class="mullet">Mullet, Australian Salmon,</li>
+						<li class="see"><a href="#">See Location</a></li>
+						<li class="com"><a href="#">01</a></li>
+					</div>
+					<div class="ball">
+						<li class="wicked">Ball Bag River</li>
+						<li class="mullet">Australian Salmon, Mullet, Trevally,</li>
+						<li class="see"><a href="#">See Location</a></li>
+						<li class="loc"><a href="#">13</a></li>
+					</div>
+					<div class="blas">
+						<li class="wicked">Aireys Inlet - Eagle Rock</li>
+						<li class="mullet">Beach east side of Aire River...</li>
+						<li class="see"><a href="#">See Location</a></li>
+						<li class="com"><a href="#">01</a></li>
+					</div>
+					<div class="ball">
+						<li class="wicked">Ball Bag River</li>
+						<li class="mullet">Australian Salmon, Mullet, Trevally,</li>
+						<li class="see"><a href="#">See Location</a></li>
+						<li class="loc"><a href="#">13</a></li>
+					</div>
+				</div>
+				<div class="loc-bottom">
+					<h3>Recent locations you’ve rated</h3>
+					<p>Lets get some dunny no worries come a bloke. Stands out like a ridgy-didge where lets throw a sickie.</p>
+					<div class="air">
+						<li class="wicked">Aire River</li>
+						<li class="mullet">Mullet, Australian Salmon,</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="ball">
+						<li class="wicked">Ball Bag River</li>
+						<li class="mullet">Australian Salmon, Mullet, Trevally,</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="air">
+						<li class="wicked">Aireys Inlet - Eagle Rock</li>
+						<li class="mullet">Beach east side of Aire River...</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="ball">
+						<li class="wicked">Ball Bag River</li>
+						<li class="mullet">Australian Salmon, Mullet, Trevally,</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="air">
+						<li class="wicked">Aireys Inlet - Eagle Rock</li>
+						<li class="mullet">Beach east side of Aire River...</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="ball">
+						<li class="wicked">Ball Bag River</li>
+						<li class="mullet">Australian Salmon, Mullet, Trevally,</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="air">
+						<li class="wicked">Aireys Inlet - Eagle Rock</li>
+						<li class="mullet">Beach east side of Aire River...</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="ball">
+						<li class="wicked">Ball Bag River</li>
+						<li class="mullet">Australian Salmon, Mullet, Trevally,</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+					<div class="air">
+						<li class="wicked">Aireys Inlet - Eagle Rock</li>
+						<li class="mullet">Beach east side of Aire River...</li>
+						<li class="st"><a href="#"><img src="images/star.png" class="img-responsive" alt=""></a></li>
+						<li class="iew"><a href="#">View Location on Map</a></li>
+					</div>
+				</div>
+			</div>
+				<div class="clearfix"></div>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="container">
+			<div class="col-md-2 abo-foo1">
+				<h5>About Us</h5>
+					<ul>
+						<li><a href="about.html">About us</a></li>
+						<li><a href="#">Who started it</a></li>
+						<li><a href="#">how to help</a></li>
+					</ul>
+			</div>
+			<div class="col-md-3 abo-foo">
+				<h5>Account Information</h5>
+					<ul>
+						<li><a href="login.html">How to login</a></li>
+						<li><a href="register.html">Create an account</a></li>
+						<li><a href="login.html">Logout</a></li>
+						<li><a href="register.html">Join us</a></li>
+					</ul>
+			</div>
+			<div class="col-md-2 abo-foo1">
+				<h5>Location</h5>
+				<p>123, street name</p>
+				<p>	landmark,</p>
+				<p>	California 123</p>
+				<p>	Tel: 123-456-7890</p>
+				<p>	Fax. +123-456-7890</p>
+			</div>
+			<div class="col-md-2 abo-foo1">
+			<h5>Agreements</h5>
+			<ul>
+				<li><a href="#">Legal agreement</a></li>
+				<li><a href="#">Model release (adult)</a></li>
+				<li><a href="#">Model release (Minor)</a></li>
+				<li><a href="#">Property Release</a></li>
+			</ul>
+		</div>
+			<div class="col-md-3 abo-foo">
+				<li a="" href="#">
+					<div class="drop-down1">
+						<select class="d-arrow">
+							<option value="Eng">Our Network</option>
+								<option value="Fren">versions</option>
+								<option value="Russ">variations</option>
+								<option value="Chin">Internet</option>
+						</select>
+					</div>
+				</li>
+			</div>
+				<div class="clearfix"></div>
+			<div class="footer-bottom">
+				<p>Copyrights © 2015 Location All rights reserved | Template by <a href="http://w3layouts.com/">&nbsp; W3layouts</a></p>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
